--- a/git.test.html
+++ b/git.test.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Document</title>
 </head>
+<header>
+    <h1>Logo</h1>
+</header>
+
 <body>
     <p>This is my first change.</p>
 </body>
